Fixed welcome header clipping with layout navbar

--- a/mealplanner/static/styles.css
+++ b/mealplanner/static/styles.css
@@ -19,6 +19,29 @@ body {
 
 /* Index Page Section */
 
+.indexPageHeaderRow {
+    position: relative;
+    top: -65px;
+}
+
+.indexPageHeaderCol {
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.55);
+    /* Black w/opacity/see-through */
+    color: white;
+    font-weight: bold;
+    border: 3px solid #f1f1f1;
+    border-radius: 4px;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 40%;
+    padding: 20px;
+    text-align: center;
+}
+
 .createPlannerText,
 .indexRecipeBoxText {
     font-family: 'Josefin Sans', sans-serif;
